--- a/style.css
+++ b/style.css
@@ -5,8 +5,94 @@
 *{
   margin: 0;
   padding: 0;
+  list-style-type: none;
+  text-decoration: none; 
 }
 
+/* criacao de variaveis font*/
+:root {
+  --font-primary: "Baloo Da 2", serif;
+  --font-secondary: "Josefin Slab", serif;
+  --font-action: "Muli", serif;
+}
+
+.hamburguer {
+ 
+  width: 2rem;
+  height: 2rem;
+  position:fixed;
+  /* aqui ele vai fica por cima do capa sendo o primeiro elemento de todos */
+  z-index: 100;
+  right:2rem;
+  top: 2rem;  
+  
+  display:flex;
+  flex-direction:column;
+  justify-content:space-evenly;  
+  cursor: pointer;
+
+}
+
+.show-menu .hamburguer {
+  right:16rem;
+}
+
+.line {
+  width:100%;
+  height: .1rem;
+  background-color: #fff;
+  box-shadow: 0.1rem 0.1 1px #000;
+  transition: transform 1s;
+
+}
+
+.show-menu #line1 {
+  transform: rotate(45deg) translate(.3rem, .45rem);
+
+}
+
+
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(.3rem, -.45rem);;
+
+}
+
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  height: 2rem;
+  width: 6rem;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-color: #a044ff;
+  color: #fff;
+  font-family: var(--font-action);
+  opacity: 0;
+
+}
+
+/* criando um pseudo elemento com ::before */
+.hamburguer span::before {
+  content:"";
+  position: absolute;
+  border-right: .5rem solid #000000;
+  border-top: .5rem solid transparent;
+  border-left: .5rem solid transparent;
+  border-bottom: .5rem solid transparent;
+  left: -.1rem;
+
+}
+
+.show-menu .hamburguer:hover span{
+  opacity: 1;
+
+}
 
 header {
   width: 100;
@@ -48,7 +134,7 @@ header {
 .banner h1{
   color: #ffffff;
   font-size: 3.5rem;
-  font-family: "Baloo Da 2", serif;
+  font-family:var(--font-primary);
   font-weight: 200;  
   /* no text shadow pode muda as sombra do texto....*/
   text-shadow: .3rem .4rem 2px rgba(0,0,0,.4);
@@ -59,7 +145,7 @@ header {
 }
 
 .banner p{
-  font-family: "Josefin Slab", serif;
+  font-family: var(--font-secondary);
   color: #fff;
   font-size:1.5rem;
   text-shadow: .2rem .2rem rgba(0,0,0,.4);
@@ -69,7 +155,7 @@ header {
 }
 
 .banner button {
-    font-family: "Muli", serif;
+    font-family: var(--font-action);
     color: #fff;
     text-transform: uppercase;
     /* separar as letrar para que nao fiquem tao juntas umas das outras*/
@@ -88,9 +174,9 @@ header {
 /*evento para o botao */
 .banner button:hover {
   opacity: 0.9;
-  color: #000 ;
+  color: #000;
 }
-
+/* fazendo animacao no titulo,paragrafo e botao*/
 @keyframes moveBanner {
     0% {
       transform:translateY(10rem) rotateY(-30deg);      
@@ -102,9 +188,65 @@ header {
 
 }
 
+ .sidebar {
+  width: 20rem;
+  height: 100vh;
+  background-color:rgba(0,0,0,.4);
+  position:fixed;
+  top:0;
+  right: -20rem;
+  transition:all 1s;
+}
 
+.show-menu .sidebar {
+  right: 0;
+}
 
+.menu {
+  position:absolute;
+  top:40%;
+  left:50%;
+  transform: translate(-50%, -50%);
 
+}
 
+.menu-item {
+  text-align: center;
+  margin-bottom: .5rem;
+}
+
+.menu-link {
+  font-family: var(--font-action);
+  font-size: 2rem;
+  color:#555;
+  transition: color 1s;
+}
+.menu-link:hover {
+  color: #6a3093;
+}
+
+.social-media {  
+  position:absolute;
+  bottom: 2rem;
+  width: 100%;
+  display:flex;
+  justify-content:space-evenly;
+}
+
+.social-media i {  
+  color:#fff;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 1.5rem;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  border-radius: 50%;
+  transition: background-color 1s;
+}
+
+.social-media i:hover {
+  background-color: rgb(97, 0, 97);
+}
 
 
